# tcc_image_classification_by_relevance_of_regions

./: README.md  backup_functions.py  files.py  glcm.py  lbp.py  lpq.py  main.ipynb  pyproject.toml  requirements.txt  utils.py
features/: glcm.npy  lbp.npy  lpq.npy
tools/: __init__.py  image_tools.py  specialists.py
